--- a/package.json
+++ b/package.json
@@ -9,11 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.4.0",
+    "@mantine/carousel": "^7.12.2",
+    "@mantine/core": "^7.12.2",
+    "@mantine/hooks": "^7.12.2",
+    "antd": "^5.20.4",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^7.1.0",
     "express": "^4.19.2",
+    "less": "^4.2.0",
+    "less-loader": "^12.2.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "next": "^14.2.7",
+    "next-plugin-antd-less": "^1.8.0",
+    "node": "^22.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -23,8 +33,10 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
+    "eslint-config-mantine": "3.2.0",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
+    "postcss-preset-mantine": "1.17.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
