--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.2.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.0.1",
     "@nextui-org/react": "^2.4.6",
+    "antd": "^5.20.4",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^7.1.0",
     "express": "^4.19.2",
