--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "next-plugin-antd-less": "^1.8.0",
     "node": "^22.7.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "uuid": "^10.0.0",
+    "uuid-int": "^3.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
