--- a/package.json
+++ b/package.json
@@ -27,13 +27,17 @@
     "express": "^4.19.2",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
+    "lucide-react": "^0.438.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.6.0",
     "next": "^14.2.7",
     "next-plugin-antd-less": "^1.8.0",
     "node": "^22.7.0",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "recharts": "^2.12.7",
+    "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "uuid-int": "^3.1.0"
   },
