--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^6.0.1",
     "@nextui-org/react": "^2.4.6",
     "antd": "^5.20.4",
+    "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^7.1.0",
     "express": "^4.19.2",
