--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.7",
+    "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "uuid-int": "^3.1.0"
