--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "eslint": "^8",
     "eslint-config-mantine": "3.2.0",
     "eslint-config-next": "14.2.7",
+    "jose": "^5.8.0",
     "postcss": "^8",
     "postcss-preset-mantine": "1.17.0",
     "tailwindcss": "^3.4.1",
