--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "next": "^14.2.7",
     "next-plugin-antd-less": "^1.8.0",
     "node": "^22.7.0",
+    "node-cron": "^3.0.3",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20",
+    "@types/node-cron": "^3.0.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
