--- a/package.json
+++ b/package.json
@@ -21,12 +21,16 @@
     "@mantine/hooks": "^7.12.2",
     "@mui/material": "^6.0.1",
     "@nextui-org/react": "^2.4.6",
+    "@types/leaflet": "^1.9.12",
     "antd": "^5.20.4",
     "axios": "^1.7.7",
     "child_process": "^1.0.2",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^7.1.0",
     "express": "^4.19.2",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
+    "leaflet-geosearch": "^4.0.0",
     "less": "^4.2.0",
     "less-loader": "^12.2.0",
     "lucide-react": "^0.438.0",
@@ -38,6 +42,7 @@
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
