--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "node": "^22.7.0",
     "node-cron": "^3.0.3",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
+    "react-modal": "^3.16.1",
     "recharts": "^2.12.7",
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
