--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcryptjs": "^2.4.3",
     "child_process": "^1.0.2",
     "cron": "^3.1.7",
+    "discord.js": "^14.16.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^7.1.0",
     "express": "^4.19.2",
@@ -68,6 +69,8 @@
     "postcss": "^8",
     "postcss-preset-mantine": "1.17.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tsup": "^8.2.4",
+    "tsx": "^4.19.0",
+    "typescript": "^5.6.2"
   }
 }
