--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "botDev": "tsx watch src/index.ts",
+    "botStart": "node .",
+    "botBuild": "tsup src/index.ts --minify",
+    "botFormat": "prettier --write \"**/*.{json,ts}\"",
+    "botLint": "eslint . --ext ts --fix"
   },
   "dependencies": {
     "@ant-design/charts": "^2.2.1",
@@ -26,7 +31,7 @@
     "bcryptjs": "^2.4.3",
     "child_process": "^1.0.2",
     "cron": "^3.1.7",
-    "discord.js": "^14.16.1",
+    "discord.js": "^14.7.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^7.1.0",
     "express": "^4.19.2",
