--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "antd": "^5.20.4",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.4.4",
     "child_process": "^1.0.2",
+    "country-flag-icons": "^1.5.13",
     "cron": "^3.1.7",
     "discord.js": "^14.7.1",
     "dotenv": "^16.4.5",
     "embla-carousel-react": "^7.1.0",
     "express": "^5.0.0",
+    "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "leaflet-geosearch": "^4.0.0",
@@ -49,11 +52,13 @@
     "node-cron": "^3.0.3",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-country-flag": "^3.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
     "recharts": "^2.12.7",
+    "semantic-ui-react": "^2.1.5",
     "sharp": "^0.33.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
