--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "uuid-int": "^3.1.0"
   },
   "devDependencies": {
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
     "@types/bcryptjs": "^2.4.6",
     "@types/express": "^4.17.21",
     "@types/leaflet": "^1.9.12",
@@ -72,6 +75,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "dayjs": "^1.11.13",
     "eslint": "^8",
     "eslint-config-mantine": "3.2.0",
     "eslint-config-next": "14.2.7",
