--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "jose": "^5.8.0",
     "postcss": "^8",
     "postcss-preset-mantine": "1.17.0",
+    "react-google-charts": "^4.0.1",
     "tailwindcss": "^3.4.1",
     "tsup": "^8.2.4",
     "tsx": "^4.19.0",
