--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^18.3.1",
     "react-leaflet": "^4.2.1",
     "react-modal": "^3.16.1",
+    "react-spinners": "^0.14.1",
     "recharts": "^2.12.7",
     "semantic-ui-react": "^2.1.5",
     "sharp": "^0.33.5",
